244Initials/force-app/main/default/objects/ARTL_LogEvent__e/ARTL_LogEvent__e.object-meta.xml
<CustomObject>
    <label>ARTL_LogEvent</label>
    <pluralLabel>ARTL_LogEvents</pluralLabel>
</CustomObject>