244Initials/force-app/main/default/objects/ARTL_LogEvent__e/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <label>Context</label>
    <length>50</length>
    <type>Text</type>
</CustomField>