244Initials/force-app/main/default/objects/ARTL_LogEvent__e/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>