244Initials/force-app/main/default/objects/ARTL_LogEvent__e/fields/Limit_Data__c.field-meta.xml
<CustomField>
    <fullName>Limit_Data__c</fullName>
    <label>Limit Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>