244Initials/force-app/main/default/objects/ARTL_LogEvent__e/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <label>StackTrace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>