244Initials/force-app/main/default/objects/ARTL_LogEvent__e/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <length>50</length>
    <type>Text</type>
</CustomField>